# shmark

./: .gitignore  Cargo.toml  README.md  SPEC.md
artifacts/research/: agent-driven-tauri-testing-2026-05-06.md
crates/shmark-api/: Cargo.toml
crates/shmark-api/src/: dispatch.rs  lib.rs  protocol.rs  server.rs
crates/shmark-api/tests/: dispatch_test.rs  pairing_test.rs  routing_test.rs
crates/shmark-cli/: Cargo.toml
crates/shmark-cli/src/: client.rs  main.rs
crates/shmark-cli/src/commands/: contacts.rs  context.rs  daemon.rs  devices.rs  groups.rs  identity.rs  mod.rs  shares.rs
crates/shmark-core/: Cargo.toml
crates/shmark-core/examples/: debug_search.rs
crates/shmark-core/src/: contacts.rs  dev.rs  device.rs  groups.rs  identity.rs  lib.rs  node.rs  pairing.rs  paths.rs  resolve.rs  settings.rs  shares.rs  state.rs
crates/shmark-tauri/: Cargo.toml  tauri.conf.json
crates/shmark-tauri/capabilities/: default.json
crates/shmark-tauri/src/: dev_consumer.rs  main.rs
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  Settings.tsx  ShareFromClipboard.tsx  api.ts  dev.ts  main.tsx  styles.css  util.ts
frontend/src/render/: CodeView.tsx  CsvTable.tsx  Markdown.tsx  Mermaid.tsx  ShareView.tsx
frontend/src/views/: GroupView.tsx  InboxView.tsx
frontend/tests/components/: Settings.test.tsx  ShareFromClipboard.test.tsx
frontend/tests/render/: CodeView.test.tsx  CsvTable.test.tsx  Markdown.test.tsx
tests/e2e/: copy-share-code.spec.ts  folder-share.spec.ts  harness.ts  inbox.spec.ts  run-all.sh  settings.spec.ts  share-from-clipboard.spec.ts  tsconfig.json
