[workspace]
resolver = "2"
members = [
    "crates/shmark-core",
    "crates/shmark-api",
    "crates/shmark-cli",
    "crates/shmark-tauri",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["Tejas Shah"]
repository = "https://github.com/Tshah-95/shmark"
rust-version = "1.95"

[workspace.dependencies]
# core
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# crypto + identity
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
rand = "0.8"
hex = "0.4"
blake3 = "1"

# fs + paths
dirs = "5"

# p2p
iroh = "0.98"
iroh-blobs = "0.100"
iroh-docs = "0.98"
iroh-gossip = "0.98"
n0-future = "0.3"

# misc
uuid = { version = "1", features = ["v4"] }
bytes = "1"
futures-util = "0.3"
base64 = "0.22"
ignore = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
mime = "0.3"
mime_guess = "2"
tempfile = "3"
url = "2"

# cli
clap = { version = "4", features = ["derive"] }
libc = "0.2"

# internal
shmark-core = { path = "crates/shmark-core" }
shmark-api = { path = "crates/shmark-api" }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
