[package]
name = "shmark-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

ed25519-dalek.workspace = true
rand.workspace = true
hex.workspace = true
blake3.workspace = true

dirs.workspace = true
iroh.workspace = true
